--- a/app/views/aanestys/muokkaa.html
+++ b/app/views/aanestys/muokkaa.html
@@ -1,5 +1,4 @@
 
-
 {% extends "base.html" %}
 
 {% block content %}
@@ -16,25 +15,26 @@
   {% endif %}
 
 
-  <h1>Uusi äänestys</h1>
 
-  <form method="post" action="{{base_path}}/aanestys">
+  <h1>Muokkaa äänestys</h1>
+
+  <form method="post" action="{{base_path}}/aanestys/{{aanestys.id}}/muokkaa">
 
     <div class="form-group">
       <label>Nimi</label>
-      <input name="nimi" class="form-control" value="{{attributes.nimi}}" type="text">
+      <input name="nimi" class="form-control" value="{{aanestys.nimi}}" type="text">
     </div>
     <div class="form-group">
       <label>Äänestys alkaa</label>
-      <input name="aanestysalkaa" class="form-control" value="{{attributes.aanestysalkaa}}" type="text">
+      <input name="aanestysalkaa" class="form-control" value="{{aanestys.aanestysalkaa}}" type="text">
     </div>
     <div class="form-group">
       <label>Äänestys loppuu</label>
-      <input name="aanestysloppuu" class="form-control" value="{{attributes.aanestysloppuu}}" type="text">
+      <input name="aanestysloppuu" class="form-control" value="{{aanestys.aanestysloppuu}}" type="text">
     </div>
     <div class="form-group">
       <label>Kuvaus</label>
-      <textarea name="kuvaus" class="form-control">{{attributes.kuvaus}}        
+      <textarea name="kuvaus" class="form-control">{{aanestys.kuvaus}}
       </textarea>
     </div>
     <div class="checkbox">
@@ -53,7 +53,7 @@
     <a href="#" class="btn btn-success">Lisää ehdokas</a>
   </p>
       
-    <button type="submit" class="btn btn-primary">Tallenna äänestys</button>
+    <button type="submit" class="btn btn-primary">Muokkaa äänestys</button>
   </form>
     
 {% endblock %}
