--- a/app/views/aanestys/aanestys.html
+++ b/app/views/aanestys/aanestys.html
@@ -2,14 +2,16 @@
 
 {% block content %}
 
-  <h1>Äänestys</h1>
+  <h1>Äänestys: {{aanestys.nimi}}</h1>
   
 {% if message %}
 <div class="alert alert-success">
     {{message}}
 </div>
-{% endif %}  
-
+{% endif %}
+  {% if user_logged_in %}
+    <h1>Käyttäjän {{user_logged_in.name}} pelikirjasto</h1>
+  {% endif %}
 <form method="post" action="{{base_path}}/aanestys/{{aanestys.id}}/poista" style="display: inline-block;">
   <button type="submit" class="btn btn-danger">Poista</button>
 </form>  
