--- a/app/views/aanestys/lista.html
+++ b/app/views/aanestys/lista.html
@@ -40,5 +40,8 @@
   <p>
     <a href="uusi" class="btn btn-success">Uusi äänestys</a>
   </p>
+    <p>
+    <a href="kirjaudu" class="btn btn-success">Kirjaudu</a>
+  </p>
   
 {% endblock %}
