--- a/app/views/aanestys/uusi.html
+++ b/app/views/aanestys/uusi.html
@@ -34,7 +34,7 @@
     </div>
     <div class="form-group">
       <label>Kuvaus</label>
-      <textarea name="kuvaus" class="form-control">{{attributes.kuvaus}}        
+      <textarea name="kuvaus" class="form-control">{{attributes.kuvaus}}
       </textarea>
     </div>
     <div class="checkbox">
@@ -46,14 +46,14 @@
       
 
       
-      <h3>Vaihtoehdot</h3>
+      <!--<h3>Vaihtoehdot</h3>-->
 
 
-  <p>
+<!--  <p>
     <a href="#" class="btn btn-success">Lisää ehdokas</a>
-  </p>
-      
-    <button type="submit" class="btn btn-primary">Tallenna äänestys</button>
+  </p>-->
+      <!--<a href="{{base_path}}/{{aanestys.id}}">-->
+    <button type="submit" class="btn btn-primary">Lisää ehdokkaat</button>
   </form>
     
 {% endblock %}
