--- a/app/views/kayttaja/kirjautuminen.html
+++ b/app/views/kayttaja/kirjautuminen.html
@@ -3,15 +3,15 @@
   
 <h1>Kirjaudu sisään</h1>
 
-  <form method="post" action="{{base_path}}/login">
+  <form method="post" action="{{base_path}}/kirjaudu">
     <div class="form-group">
       <label>Käyttäjätunnus</label>
-      <input class="form-control" name="username" value="{{username}}" type="text">
+      <input class="form-control" name="nimi" value="{{username}}" type="text">
     </div>
 
     <div class="form-group">
       <label>Salasana</label>
-      <input class="form-control" name="password" type="password">
+      <input class="form-control" name="salasana" type="password">
     </div>
 
     <button type="submit" class="btn btn-primary">Kirjaudu sisään</button>
