--- a/app/views/base.html
+++ b/app/views/base.html
@@ -37,10 +37,18 @@
         </div>
 
         <div class="collapse navbar-collapse" id="navigation">
-          <ul class="nav navbar-nav">
-            <!-- Navigaation linkit -->
-            <li><a href="{{base_path}}">Kirjaudu?</a></li>
-          </ul>
+              <ul class="nav navbar-nav navbar-right">
+                <li><a href="{{base_path}}/rekisteroidy">Rekisteröidy</a></li>
+              </ul>
+            {% if user_logged_in %}
+              <form class="navbar-form navbar-right" method="post" action="{{base_path}}/uloskirjautuminen">
+                <button type="submit" class="btn btn-default">Kirjaudu ulos</button>
+              </form>
+            {% else %}
+              <ul class="nav navbar-nav navbar-right">
+                <li><a href="{{base_path}}/kirjaudu">Kirjaudu sisään</a></li>
+              </ul>
+            {% endif %}
         </div>
       </div>
     </nav>
