--- a/app/views/aanestys/muokkaa.html
+++ b/app/views/aanestys/muokkaa.html
@@ -50,7 +50,7 @@
 
 
   <p>
-    <a href="#" class="btn btn-success">Lisää ehdokas</a>
+    <a href="{{base_path}}/uusi/{{aanestys.id}}/uusiehdokas" class="btn btn-success">Lisää ehdokas</a>
   </p>
       
     <button type="submit" class="btn btn-primary">Muokkaa äänestys</button>
