--- a/app/views/base.html
+++ b/app/views/base.html
@@ -44,6 +44,9 @@
               <form class="navbar-form navbar-right" method="post" action="{{base_path}}/uloskirjautuminen">
                 <button type="submit" class="btn btn-default">Kirjaudu ulos</button>
               </form>
+              <ul class="nav navbar-nav navbar-right">
+                <li><a href="{{base_path}}/omalista">Omalista</a></li>
+              </ul>
             {% else %}
               <ul class="nav navbar-nav navbar-right">
                 <li><a href="{{base_path}}/kirjaudu">Kirjaudu sisään</a></li>
