--- a/app/views/aanestys/aanestys.html
+++ b/app/views/aanestys/aanestys.html
@@ -39,6 +39,7 @@
             <td>{{ehdokas.aania}}</td>
             <td>
                 <form method="post" action="{{base_path}}/aanesta">
+                    <input name='onkoid' value='{{aanestys.onkoid}}' type='hidden'>
                     <input name='aanestysid' value='{{aanestys.id}}' type='hidden'>
                     <input name='ehdokasid' value='{{ehdokas.id}}' type='hidden'>
                     <button type="submit" class="button">Äänestä</button>
