--- a/app/views/aanestys/omalista.html
+++ b/app/views/aanestys/omalista.html
@@ -20,7 +20,7 @@
     <tbody>
       {% for aanestys in aanestykset %}
         <tr>
-          <td><a href="{{base_path}}/{{aanestys.id}}">{{aanestys.nimi}}</td>
+          <td><a href="{{base_path}}/omalista/{{aanestys.id}}">{{aanestys.nimi}}</td>
           <td>{{aanestys.aanestysalkaa}}</td>          
           <td>{{aanestys.aanestysloppuu}}</td>
           <td>{{aanestys.kuvaus}}</td>
