--- a/app/views/aanestys/muokkaa.html
+++ b/app/views/aanestys/muokkaa.html
@@ -47,7 +47,32 @@
 
       
       <h3>Vaihtoehdot</h3>
+      
+  <table class="table table-striped table-bordered">
+    <thead>
+      <tr>
+        <th>Ehdokas</th>
+        <th>Tietoja</th>
+        <th>Aania</th>
+      </tr>
+    </thead>
 
+    <tbody>
+      {% for ehdokas in ehdokkaat %}
+        <tr>
+          <!--<td><a href="{{base_path}}/aanestys/{{aanestys.id}}">{{aanestys.nimi}}</td>-->
+            <td>{{ehdokas.nimi}}</td>
+            <td>{{ehdokas.kuvaus}}</td>
+            <td>{{ehdokas.aania}}</td>
+            <td>
+                <form method="post" action="{{base_path}}/ehdokas/{{ehdokas.id}}/poista">
+                    <button type="submit" class="button">Poista</button>
+                </form>
+            </td>
+        </tr>
+      {% endfor %}
+    </tbody>
+  </table>
 
   <p>
     <a href="{{base_path}}/uusi/{{aanestys.id}}/uusiehdokas" class="btn btn-success">Lisää ehdokas</a>
