--- a/app/views/kayttaja/kirjautuminen.html
+++ b/app/views/kayttaja/kirjautuminen.html
@@ -1,5 +1,15 @@
 {% extends "base.html" %}
 {% block content %}
+
+  {% if error %}
+    <div class="alert alert-danger">
+      <ul>
+        
+        <li>{{error}}</li>
+        
+      </ul>
+    </div>
+  {% endif %}  
   
 <h1>Kirjaudu sisään</h1>
 
