--- a/app/views/aanestys/omaaanestys.html
+++ b/app/views/aanestys/omaaanestys.html
@@ -49,5 +49,24 @@
     </tbody>
   </table>
 
+<h3>Aanestetty</h3>
+
+  <table class="table table-striped table-bordered">
+    <thead>
+      <tr>
+        <th>Ehdokas</th>
+        <th>Aanestetty</th>
+      </tr>
+    </thead>
+
+    <tbody>
+      {% for aani in aanet %}
+        <tr>
+          <td>{{aani.ehdokasnimi}}</td>
+          <td>{{aani.aanestetty}}</td>
+        </tr>
+      {% endfor %}
+    </tbody>
+  </table>
 
 {% endblock %}
