--- a/app/views/aanestys/uusi.html
+++ b/app/views/aanestys/uusi.html
@@ -25,11 +25,12 @@
       <input name="nimi" class="form-control" value="{{attributes.nimi}}" type="text">
     </div>
     <div class="form-group">
-      <label>Äänestys alkaa</label>
+      <label>Äänestys alkaa (vvvv.kk.pp)</label>
+      <!--<input class="form-control" type="time" id="kellonaika" name="kellonaika">-->
       <input name="aanestysalkaa" class="form-control" value="{{attributes.aanestysalkaa}}" type="text">
     </div>
     <div class="form-group">
-      <label>Äänestys loppuu</label>
+      <label>Äänestys loppuu (vvvv.kk.pp)</label>
       <input name="aanestysloppuu" class="form-control" value="{{attributes.aanestysloppuu}}" type="text">
     </div>
     <div class="form-group">
