--- a/app/views/ehdokas/uusiehdokas.html
+++ b/app/views/ehdokas/uusiehdokas.html
@@ -13,7 +13,7 @@
     </div>
   {% endif %}
   
-<h1>Äänestys: {{aanestys.nimi}}{{aanestys.id}}</h1>  
+<h1>Äänestys: {{aanestys.nimi}}</h1>  
   
 <h3>Vaihtoehdot</h3>
 
