--- a/app/views/aanestys/muokkaa.html
+++ b/app/views/aanestys/muokkaa.html
@@ -37,6 +37,7 @@
       <textarea name="kuvaus" class="form-control">{{aanestys.kuvaus}}
       </textarea>
     </div>
+    <input name='id' value='{{aanestys.id}}' type='hidden'>  
     <div class="checkbox">
       
         <input type='hidden' value='false' name='onkoid'>
